#
# snowpatch - continuous integration for patch-based workflows
#
# Copyright (C) 2016-2018 IBM Corporation
# Authors:
#     Russell Currey <ruscur@russell.cc>
#     Andrew Donnellan <andrew.donnellan@au1.ibm.com>
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option)
# any later version.
#
# Cargo.toml - cargo build configuration file
#

[package]
name = "snowpatch"
version = "0.9.0"
authors = ["Russell Currey <ruscur@russell.cc>",
	   "Andrew Donnellan <andrew.donnellan@au1.ibm.com>"]
homepage = "https://github.com/ruscur/snowpatch"
repository = "https://github.com/ruscur/snowpatch.git"
documentation = "https://github.com/ruscur/snowpatch/tree/master/docs"
description = "continuous integration for patch-based workflows"
readme = "README.md"
license = "GPL-2.0+"
keywords = ["CI", "patch", "patchwork", "jenkins", "git"]
edition = "2018"

[dependencies]
clap = "2.33"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = { version = "2.2", features = ["serde"] }
ureq = { version = "2.1", features = ["json"] }
env_logger = "0.8"
log = "0.4"
rayon = "1.5"
lazy_static = "1.4"
sled = "0.34"
bincode = "1.3"
git2 = "0.13"
dyn-clone = "1.0.4"
